--- a/linear_notebook.ipynb
+++ b/linear_notebook.ipynb
@@ -10,7 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "id": "01ed6db5-53a3-4d23-ab65-68cc5664ef42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nbgitpuller "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "ba460ca1-89ed-426c-85f9-5239eb1a8ee4",
    "metadata": {},
    "outputs": [],
@@ -20,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "9acd2e33",
    "metadata": {},
    "outputs": [],
@@ -31,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "9cc71a5e",
    "metadata": {},
    "outputs": [],
@@ -42,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "673ac6ca",
    "metadata": {},
    "outputs": [
@@ -282,7 +292,7 @@
        "4          22  17450.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "24e4ace9",
    "metadata": {},
    "outputs": [
@@ -336,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "8c3dd190-98d2-4f26-a5c4-35e477234f0b",
    "metadata": {},
    "outputs": [],
@@ -347,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "02023daf-c067-4fd4-96f4-a1f6cd16ff77",
    "metadata": {},
    "outputs": [],
@@ -369,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "f59c9897-327b-4851-bbda-c3a9052432cf",
    "metadata": {},
    "outputs": [],
@@ -379,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "489a6740-bfb0-4b29-b59e-78771be078ed",
    "metadata": {},
    "outputs": [],
@@ -391,14 +401,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "fb6ac8c6-7355-4fe2-a04d-4c86db1e7472",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b530dc1e0ada41f0ab93dfd1a46ae117",
+       "model_id": "be3843a9965b4cd3a46d31061b24c80f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -425,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "385c1d73",
    "metadata": {},
    "outputs": [
@@ -435,7 +445,7 @@
        "(200, 26)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "a83fe264",
    "metadata": {},
    "outputs": [
@@ -679,7 +689,7 @@
        "max     288.00000  6600.000000   49.000000   54.000000  45400.000000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "c94f161c",
    "metadata": {},
    "outputs": [
@@ -727,7 +737,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "02157f2f",
    "metadata": {},
    "outputs": [
@@ -791,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "c3892b3b",
    "metadata": {},
    "outputs": [
@@ -1006,7 +1016,7 @@
        "4         115     5500       18          22  17450.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "c12ab7d5",
    "metadata": {},
    "outputs": [
@@ -1067,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "3d3d5fd8",
    "metadata": {},
    "outputs": [],
@@ -1081,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "c5914d96",
    "metadata": {},
    "outputs": [
@@ -1415,7 +1425,7 @@
        "price               0.811314 -0.092900 -0.683993   -0.693007  1.000000  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1437,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "a2cf37ea",
    "metadata": {},
    "outputs": [
@@ -1447,7 +1457,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1473,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "fdfb8f6f",
    "metadata": {},
    "outputs": [
@@ -1483,7 +1493,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1511,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "de23e434",
    "metadata": {},
    "outputs": [],
@@ -1532,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "8eaa5100",
    "metadata": {},
    "outputs": [
@@ -1542,7 +1552,7 @@
        "6"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1556,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "51dce6b7",
    "metadata": {},
    "outputs": [
@@ -1571,7 +1581,7 @@
        " 'horsepower'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1582,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "cd7aa4a8",
    "metadata": {},
    "outputs": [],
@@ -1593,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "e5743ab0",
    "metadata": {},
    "outputs": [
@@ -6049,7 +6059,7 @@
        "199   3.150              7.50     5100       17  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6061,7 +6071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "9ca01724",
    "metadata": {},
    "outputs": [
@@ -6071,7 +6081,7 @@
        "(200, 16)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6082,7 +6092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "75a4a4fe",
    "metadata": {},
    "outputs": [
@@ -6132,7 +6142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "692b6769",
    "metadata": {},
    "outputs": [
@@ -6172,7 +6182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "61647415",
    "metadata": {},
    "outputs": [],
@@ -6184,7 +6194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "5b8c5b7e",
    "metadata": {},
    "outputs": [
@@ -15872,7 +15882,7 @@
        "199             True            False            False  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15884,7 +15894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "751838cb",
    "metadata": {},
    "outputs": [
@@ -25572,7 +25582,7 @@
        "199       -0.070888         1.105542        -0.217072        -0.070888  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25610,7 +25620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "1da3d38c",
    "metadata": {},
    "outputs": [],
@@ -25621,7 +25631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "id": "73fd4afa",
    "metadata": {},
    "outputs": [],
@@ -25635,7 +25645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "id": "1562b2c4",
    "metadata": {},
    "outputs": [
@@ -25648,7 +25658,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25662,7 +25672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "e27c3977",
    "metadata": {},
    "outputs": [
@@ -25681,7 +25691,7 @@
        "       11108.53383299, 14831.39319936,  5920.88485421, 16795.24658166])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25693,7 +25703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "id": "27b7afc8",
    "metadata": {},
    "outputs": [
@@ -25709,7 +25719,7 @@
        "        8189.   , 17950.   ,  7349.   , 18399.   ])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25720,7 +25730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "id": "df8c5345",
    "metadata": {},
    "outputs": [
@@ -25730,7 +25740,7 @@
        "0.8285650454048933"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25744,7 +25754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "id": "1cabf3fa",
    "metadata": {},
    "outputs": [
@@ -25770,7 +25780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "id": "3eaeaa8b",
    "metadata": {},
    "outputs": [],
@@ -25801,7 +25811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "id": "c5bd0d9d",
    "metadata": {},
    "outputs": [
@@ -26028,7 +26038,7 @@
        "4    3.15               9.5         114     5400       19          25  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26042,7 +26052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "id": "d792b997",
    "metadata": {},
    "outputs": [
@@ -26251,7 +26261,7 @@
        "4     5400       19          25  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26264,7 +26274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "id": "84b247c6",
    "metadata": {},
    "outputs": [
@@ -26430,7 +26440,7 @@
        "4               9.5     5400       19  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26443,7 +26453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "id": "2ccaefc0",
    "metadata": {},
    "outputs": [
@@ -26483,7 +26493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "id": "c70f44c0",
    "metadata": {},
    "outputs": [
@@ -26493,7 +26503,7 @@
        "(5, 16)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26504,7 +26514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "id": "bf0a0ffc",
    "metadata": {},
    "outputs": [
@@ -26832,7 +26842,7 @@
        "4              NaN              NaN              NaN  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26847,7 +26857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "id": "0f388237",
    "metadata": {},
    "outputs": [
@@ -26857,7 +26867,7 @@
        "(5, 36)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26876,7 +26886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "id": "c586f1fd",
    "metadata": {},
    "outputs": [
@@ -27204,7 +27214,7 @@
        "4              0.0              0.0              0.0  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27217,7 +27227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "id": "840e64f6",
    "metadata": {},
    "outputs": [
@@ -27545,7 +27555,7 @@
        "4              0.0              0.0              0.0  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27581,7 +27591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "id": "ceb63a72",
    "metadata": {},
    "outputs": [
@@ -27603,7 +27613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "id": "c2ea567d",
    "metadata": {},
    "outputs": [
@@ -27843,7 +27853,7 @@
        "4         17942.498638  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
